# django-adminlte2-pdq

./: .coveragerc  .cspell  .cspell.txt  .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  MANIFEST.in  Pipfile  README.md  coverage_tests.sh  cspell.json  generate_docs.sh  install-dependencies.py  pyproject.toml  pytest.ini  readthedocs.yaml  requirements.txt  runpytests.py  runtests.py  setup.cfg  tox.ini
.github/dependency_versions/3.6/: requirements.txt
.github/dependency_versions/3.8/: requirements.txt
.github/workflows/: release.yaml  test.yaml  test_3.6.yaml  test_3.7.yaml  test_3.8.yaml
adminlte2_pdq/: __init__.py  admin_menu.py  constants.py  decorators.py  forms.py  menu.py  middleware.py  mixins.py  urls.py  utils.py  utlis.py  views.py
adminlte2_pdq/constants/: __init__.py  general_constants.py  route_and_policy_constants.py
adminlte2_pdq/management/commands/: showperms.py  showroutes.py  showviews.py
adminlte2_pdq/templates/admin/: app_index.html  base.html  change_form.html  change_list.html  delete_confirmation.html  delete_selected_confirmation.html  index.html  object_history.html
adminlte2_pdq/templates/adminlte2/: base.html  base_anonymous.html  demo_css.html  home.html  sample1.html  sample2.html  sample_form.html
adminlte2_pdq/templates/adminlte2_demo_css/: alerts.html  boxes.html  boxes_solid.html  boxes_standard.html  buttons_basic.html  buttons_specialized.html  carousels.html  home.html  labels.html  main.html  modals.html  tables.html  typography.html  ui_general.html  widgets.html
adminlte2_pdq/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  register.html
adminlte2_pdq/templatetags/: adminlte_filters.py  adminlte_tags.py  sidebar_menu.py
adminlte2_pdq/templatetags/admin/: admin_control_sidebar.py  admin_header.py  admin_index.py  admin_menu.py
adminlte2_pdq/views/: __init__.py  demo_css.py  general.py
dependencies/: requirements.txt
dependencies/builds/: requirements.txt
dependencies/dev/: requirements.txt
dependencies/docs/: requirements.txt
dependencies/tests/: requirements-lt-38.txt  requirements.txt
django_adminlte2/: apps.py  menu.py  mixins.py  urls.py  views.py
django_adminlte2/templates/admin/: change_form.html  change_list.html  delete_confirmation.html  delete_selected_confirmation.html  index.html
django_adminlte2/templates/adminlte2/: base.html  demo_css.html  sample1.html
django_adminlte2/templates/registration/: logged_out.html  login.html
django_adminlte2/templatetags/: adminlte_helpers.py  sidebar_menu.py
django_adminlte2/templatetags/admin/: admin_index.py  admin_menu.py
django_adminlte2/tests/: test_decorators.py  test_mixins.py  test_templatetags.py  test_templatetags_admin_menu.py  test_templatetags_sidebar_menu.py  test_views.py
django_adminlte_2/: admin_menu.py  apps.py  constants.py  decorators.py  forms.py  menu.py  middleware.py  mixins.py  urls.py  views.py
django_adminlte_2/templates/admin/: change_list.html  object_history.html
django_adminlte_2/templates/adminlte2/: base.html  base_anonymous.html  sample2.html  sample_form.html
django_adminlte_2/templates/registration/: login.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_email.html  password_reset_form.html  register.html
django_adminlte_2/templatetags/: adminlte_filters.py  adminlte_helpers.py  adminlte_tags.py  sidebar_menu.py
django_adminlte_2/templatetags/admin/: admin_control_sidebar.py  admin_menu.py
django_adminlte_2/tests/: test_mixins.py  test_templatetags.py  test_templatetags_sidebar_menu.py  test_views.py  utils.py
docs/: generate_docs.sh  modules.rst  requirements.txt
docs/source/: api_reference.rst  authorization.rst  conf.py  configuration.rst  demo_css.rst  django_adminlte2.rst  django_adminlte2.templatetags.admin.rst  django_adminlte2.templatetags.rst  django_adminlte2.tests.rst  filters.rst  forms.rst  index.rst  longstart.rst  menu.rst  quickstart.rst  template_tags.rst  templates.rst  version_history.rst
docs/source/api/: adminlte2_pdq.management.commands.rst  adminlte2_pdq.management.rst  adminlte2_pdq.rst  adminlte2_pdq.templatetags.admin.rst  modules.rst
docs/source/api_reference/: adminlte2_pdq.constants.rst  adminlte2_pdq.management.commands.rst  adminlte2_pdq.management.rst  adminlte2_pdq.rst  adminlte2_pdq.templatetags.admin.rst  adminlte2_pdq.templatetags.rst  adminlte2_pdq.views.rst  django_adminlte_2.rst  django_adminlte_2.templatetags.admin.rst  django_adminlte_2.templatetags.rst  django_adminlte_2.tests.rst  modules.rst  sample_project.rst  tests.rst
docs/source/authorization/: class_views.rst  function_views.rst  policies.rst
docs/source/configuration/: admin.rst  authorization.rst  form.rst  home.rst  menu.rst
docs/source/menu/: admin.rst  admin_menu.rst  advanced.rst  building_blocks.rst  examples.rst  general_information.rst
docs/source/templates/: fields.rst  forms.rst  template_filters.rst  template_tags.rst  templates.rst
sample_project/: settings.py  urls.py  utils.py
tests/: settings.py  test_decorators.py  test_middleware.py  test_mixins.py  test_templatetags.py  test_templatetags_admin.py  test_templatetags_admin_menu.py  test_templatetags_sidebar_menu.py  test_urls.py  test_views.py  urls.py  urls_empty.py  utils.py  views.py
tests/django_adminlte2_pdq/django_test_project/: custom_menu_definitions.py  settings.py  test_urls_2.py  urls.py  urls_fuzzy.py  urls_main.py  utils.py  views.py
tests/templates/: full_groups_required_view.html  full_permissions_required_view.html  login_required_view.html  one_group_required_view.html  one_permission_required_view.html
tests/tests/: test_decorators.py  test_middleware.py  test_mixins.py  test_templatefilters.py  test_templatetags.py  test_templatetags_admin.py  test_templatetags_admin_menu.py  test_templatetags_sidebar_menu.py  test_views.py
(+240 files in other folders)
